# advent-of-spin

2024/Challenge-1/app/: spin.toml
2024/Challenge-1/app/wishlists/src/: lib.rs  model.rs
2024/app/: spin.toml
2024/app/.wit/components/naughty-or-nice/: deps.wit
2024/app/lib/naughty-or-nice-calculator/impl/: naighty-or-nice-calculatable.js  naighty-or-nice-calculatable.ts  naughty-or-nice.ts
2024/app/lib/naughty-or-nice-calculator/wit/: chikoski:advent-of-spin@0.1.0.wasm  world.wit
2024/app/naughty-or-nice/: Cargo.toml
2024/app/naughty-or-nice/src/: lib.rs
2024/app/naughty-or-nice/src/bindings/: deps.rs
2024/app/wishlists/: Cargo.toml
2024/app/wishlists/src/: lib.rs
