[package]
name = "naughty-or-nice"
authors = ["N.Shimizu <chikoski@gmail.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
percent-encoding = "2.3.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
spin-sdk = "3.1.0"
wit-bindgen = "0.36.0"

[workspace]
